; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/common/extr_ir-functions.c_ir_rc5_decode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/common/extr_ir-functions.c_ir_rc5_decode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [39 x i8] c"ir-common: ir_rc5_decode(%x) bad code\0A\00", align 1
@.str.1 = private unnamed_addr constant [71 x i8] c"ir-common: code=%x, rc5=%x, start=%x, toggle=%x, address=%x, instr=%x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @ir_rc5_decode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ir_rc5_decode(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %8 = load i32, i32* %3, align 4
  store i32 %8, i32* %4, align 4
  store i32 0, i32* %6, align 4
  store i32 0, i32* %7, align 4
  br label %9

9:                                                ; preds = %28, %1
  %10 = load i32, i32* %7, align 4
  %11 = icmp slt i32 %10, 14
  br i1 %11, label %12, label %31

12:                                               ; preds = %9
  %13 = load i32, i32* %3, align 4
  %14 = and i32 %13, 3
  store i32 %14, i32* %5, align 4
  %15 = load i32, i32* %3, align 4
  %16 = lshr i32 %15, 2
  store i32 %16, i32* %3, align 4
  %17 = load i32, i32* %6, align 4
  %18 = shl i32 %17, 1
  store i32 %18, i32* %6, align 4
  %19 = load i32, i32* %5, align 4
  switch i32 %19, label %27 [
    i32 0, label %20
    i32 2, label %20
    i32 1, label %21
    i32 3, label %24
  ]

20:                                               ; preds = %12, %12
  br label %27

21:                                               ; preds = %12
  %22 = load i32, i32* %6, align 4
  %23 = or i32 %22, 1
  store i32 %23, i32* %6, align 4
  br label %27

24:                                               ; preds = %12
  %25 = load i32, i32* %4, align 4
  %26 = call i32 (i32, i8*, i32, ...) @dprintk(i32 1, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0), i32 %25)
  store i32 0, i32* %2, align 4
  br label %44

27:                                               ; preds = %12, %21, %20
  br label %28

28:                                               ; preds = %27
  %29 = load i32, i32* %7, align 4
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* %7, align 4
  br label %9

31:                                               ; preds = %9
  %32 = load i32, i32* %6, align 4
  %33 = load i32, i32* %4, align 4
  %34 = load i32, i32* %6, align 4
  %35 = call i32 @RC5_START(i32 %34)
  %36 = load i32, i32* %6, align 4
  %37 = call i32 @RC5_TOGGLE(i32 %36)
  %38 = load i32, i32* %6, align 4
  %39 = call i32 @RC5_ADDR(i32 %38)
  %40 = load i32, i32* %6, align 4
  %41 = call i32 @RC5_INSTR(i32 %40)
  %42 = call i32 (i32, i8*, i32, ...) @dprintk(i32 1, i8* getelementptr inbounds ([71 x i8], [71 x i8]* @.str.1, i64 0, i64 0), i32 %32, i32 %33, i32 %35, i32 %37, i32 %39, i32 %41)
  %43 = load i32, i32* %6, align 4
  store i32 %43, i32* %2, align 4
  br label %44

44:                                               ; preds = %31, %24
  %45 = load i32, i32* %2, align 4
  ret i32 %45
}

declare dso_local i32 @dprintk(i32, i8*, i32, ...) #1

declare dso_local i32 @RC5_START(i32) #1

declare dso_local i32 @RC5_TOGGLE(i32) #1

declare dso_local i32 @RC5_ADDR(i32) #1

declare dso_local i32 @RC5_INSTR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
